[package]
name = "query_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
insta = { version = "1.45.1", features = ["yaml"] }
lalrpop = { version = "0.22.2", features = ["lexer"] }
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
libc = "0.2.178"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
proptest = "1.9.0"

[build-dependencies]
lalrpop = "0.22.2"
